--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,12 @@ django-cors-headers==3.12.0
 djangorestframework==3.13.1
 djongo==1.3.6
 dnspython==2.2.1
+Pillow==9.1.1
 pymongo==3.12.1
+python-barcode==0.14.0
 python-dotenv==0.20.0
+python-snappy==0.6.1
 pytz==2022.1
 sqlparse==0.2.4
 tzdata==2022.1
+winkerberos==0.9.0
